--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id='appBox'>
+        <img id='hearderImg' src="headerimg.png" alt="Header Image">
+    </div>
 
     <script src='main.js'></script>
 </body>
