--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id='appBox'>
-        <img id='hearderImg' src="headerimg.png" alt="Header Image">
+        <img id='headerImg' src="headerimg.png" alt="Header Image">
     </div>
 
     <script src='main.js'></script>
