--- a/index.html
+++ b/index.html
@@ -3,12 +3,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Translator</title>
+    <title>Holliday Card Translator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id='appBox'>
-        <img id='headerImg' src="headerimg.png" alt="Header Image">
+        <div>
+            <img id='headerImg' src="headerimg.png" alt="Header Image">    
+            <p>Welcome to the Holliday Card Translator!  This app is designed 
+                to help you translate your holliday card into one of three languages!
+                Just type your holliday greeting into the box below, but please only use 
+                the following words:
+                <ul>
+                    <li>And</li>
+                    <li>Christmas</li>
+                    <li>Happy</li>
+                    <li>Hollidays</li>
+                    <li>Love</li>
+                    <li>Merry</li>
+                    <li>New</li>
+                    <li>Wish</li>
+                    <li>Year</li>
+                    <li>You</li>
+                </ul>
+            </p>
+        </div>
     </div>
 
     <script src='main.js'></script>
