finished instruction paragraph

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 to help you translate your holliday card into one of three languages!
                 Just type your holliday greeting into the box below, but please only use 
                 the following words:
+            </p>
                 <ul>
                     <li>And</li>
                     <li>Christmas</li>
@@ -26,6 +27,11 @@
                     <li>Year</li>
                     <li>You</li>
                 </ul>
+            <p>
+                If you use other words for your multi-lingual holliday card, you'll make the translator sad 
+                and it will give you an error.  Once you are happy with the contents of your greeting, just select 
+                the language you would like to translate to by clicking the button labeled with that language.  
+                It's that easy!
             </p>
         </div>
     </div>
