added a text area

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <li>Christmas</li>
                     <li>Happy</li>
                     <li>Hollidays</li>
+                    <li>I</li>
                     <li>Love</li>
                     <li>Merry</li>
                     <li>New</li>
@@ -33,6 +34,7 @@
                 the language you would like to translate to by clicking the button labeled with that language.  
                 It's that easy!
             </p>
+            <textarea rows="5" cols="80" maxlength="120" wrap="hard" onfocus="if(this.value === 'Write your Holliday greeting in English here!'){this.value = '';}">Write your Holliday greeting in English here!</textarea>
         </div>
     </div>
 
