--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
                 the language you would like to translate to by clicking the button labeled with that language.  
                 It's that easy!
             </p>
-            <textarea rows="5" cols="80" maxlength="120" wrap="hard" onfocus="if(this.value === 'Write your Holliday greeting in English here!'){this.value = '';}">Write your Holliday greeting in English here!</textarea>
+            <textarea id="message" rows="5" cols="80" maxlength="120" wrap="hard" onfocus="if(this.value === 'Write your Holliday greeting in English here!'){this.value = '';}">Write your Holliday greeting in English here!</textarea>
+            <div id="outputDiv">
+                test test test
+            </div>
+            <button id=button>English</button>
         </div>
     </div>
 
