wrote code to print the English text to dom

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             </p>
             <textarea id="message" rows="5" cols="80" maxlength="120" wrap="hard" onfocus="if(this.value === 'Write your Holliday greeting in English here!'){this.value = '';}">Write your Holliday greeting in English here!</textarea>
             <div id="outputDiv">
-                test test test
+                
             </div>
-            <button id=button>English</button>
+            <button id=button onclick="English()">English</button>
         </div>
     </div>
 
