--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
                 the following words:
             </p>
                 <ul>
+                    <li>A</li>
                     <li>And</li>
                     <li>Christmas</li>
                     <li>Happy</li>
-                    <li>Hollidays</li>
+                    <li>Holidays</li>
                     <li>I</li>
                     <li>Love</li>
                     <li>Merry</li>
@@ -38,7 +39,8 @@
             <div id="outputDiv">
                 
             </div>
-            <button id=button onclick="English()">English</button>
+            <!-- <button class=button onclick="English()">English</button> -->
+            <button class=button onclick="Spanish()">Spanish</button>
         </div>
     </div>
 
