--- a/index.html
+++ b/index.html
@@ -39,8 +39,12 @@
             <div id="outputDiv">
                 
             </div>
-            <!-- <button class=button onclick="English()">English</button> -->
-            <button class=button onclick="Spanish()">Spanish</button>
+            <div id=buttonDiv>
+                <!-- <button class=button onclick="English()">English</button> -->
+                <button class=button onclick="Spanish()">Spanish</button>
+                <button class=button onclick="Italian()">Italian</button>
+                <button class=button onclick="French()">French</button>
+            </div>
         </div>
     </div>
 
