--- a/index.html
+++ b/index.html
@@ -36,11 +36,8 @@
                 It's that easy!
             </p>
             <textarea id="message" rows="5" cols="80" maxlength="120" wrap="hard" onfocus="if(this.value === 'Write your Holliday greeting in English here!'){this.value = '';}">Write your Holliday greeting in English here!</textarea>
-            <div id="outputDiv">
-                
-            </div>
+            <div id="outputDiv"></div>
             <div id=buttonDiv>
-                <!-- <button class=button onclick="English()">English</button> -->
                 <button class=button onclick="Spanish()">Spanish</button>
                 <button class=button onclick="Italian()">Italian</button>
                 <button class=button onclick="French()">French</button>
