--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </ul>
             <p>
                 If you use other words for your multi-lingual holliday card, you'll make the translator sad 
-                and it will give you an error.  Once you are happy with the contents of your greeting, just select 
+                and it will translate that word as undefined.  Once you are happy with the contents of your greeting, just select 
                 the language you would like to translate to by clicking the button labeled with that language.  
                 It's that easy!
             </p>
